# core-sdk

./: .gitignore  README.md  pyproject.toml
.github/scripts/: changelog.sh  cliff.toml
.github/workflows/: release.yaml  release.yml  run_local_test.yml  test_release.yml
ai/: pyproject.toml
core/: pyproject.toml
core/modules/container/: pyproject.toml  requirements.txt
core/modules/kfp/: pyproject.toml
data/: pyproject.toml  requirements.txt
data/modules/dbt/: pyproject.toml  requirements.txt
data/modules/nefertem/: pyproject.toml  requirements-local.txt  requirements.txt
digitalhub/: __init__.py
digitalhub/client/_base/: api_builder.py  client.py  key_builder.py
digitalhub/client/dhcore/: api_builder.py  client.py  configurator.py  credentials_store.py  env.py  error_parser.py  key_builder.py  params_builder.py  utils.py
digitalhub/client/local/: api_builder.py  client.py  enums.py  key_builder.py  params_builder.py
digitalhub/configurator/: api.py  configurator.py  credentials_store.py  ini_module.py
digitalhub/context/: api.py  builder.py  context.py
digitalhub/entities/: builders.py
digitalhub/entities/_commons/: enums.py  metrics.py  models.py  types.py  utils.py
digitalhub/entities/_constructors/: _resources.py  name.py  uuid.py
digitalhub/entities/_operations/: processor.py
digitalhub/entities/_processors/: base.py  context.py  processors.py  utils.py
digitalhub/entities/artifact/: crud.py  utils.py
digitalhub/entities/dataitem/: crud.py  utils.py
digitalhub/entities/function/: crud.py
digitalhub/entities/model/: crud.py  utils.py
digitalhub/entities/project/: crud.py  utils.py
digitalhub/entities/run/: crud.py
digitalhub/entities/secret/: crud.py
digitalhub/entities/task/: crud.py
digitalhub/entities/trigger/: crud.py
digitalhub/entities/workflow/: crud.py
digitalhub/factory/: api.py  entity.py  enums.py  factory.py  registry.py  runtime.py  utils.py
digitalhub/readers/data/: api.py  factory.py
digitalhub/readers/pandas/: enums.py  reader.py
digitalhub/runtimes/: _base.py  builder.py  enums.py
digitalhub/stores/: api.py  builder.py
digitalhub/stores/_base/: store.py
digitalhub/stores/client/: __init__.py  api.py  api_builder.py  builder.py  client.py  configurator.py  enums.py  error_parser.py  header_manager.py  http_handler.py  key_builder.py  params_builder.py  response_processor.py  utils.py
digitalhub/stores/configurator/: api.py  configurator.py  credentials_store.py  enums.py  handler.py  ini_module.py
digitalhub/utils/: data_utils.py  enums.py  exceptions.py  file_utils.py  generic_utils.py  git_utils.py  io_utils.py  logger.py  s3_utils.py  store_utils.py  types.py  uri_utils.py
ml/: pyproject.toml  requirements.txt
runtimes/container/: pyproject.toml
runtimes/dbt/: pyproject.toml
runtimes/kfp/: pyproject.toml
runtimes/mlrun/: pyproject.toml  requirements-local.txt
runtimes/modelserve/: pyproject.toml
runtimes/nefertem/: pyproject.toml
runtimes/python/: pyproject.toml
scripts/local-copy/: local_copy.sh
scripts/quick-docker-copy/: DBT.dockerfile  KFP.dockerfile  PY10.dockerfile  PY11.dockerfile  PY9.dockerfile  _DBT.dockerfile  _HERA.dockerfile  _KFP.dockerfile  _PY10.dockerfile  _PY11.dockerfile  _PY12.dockerfile  _PY9.dockerfile  build_containers.sh
scripts/spec_exporter/: exporter.sh
scripts/validate_objects/: README.md  validate.py
test/: test_crud_functions.py  test_crud_runs.py  test_crud_tasks.py  test_validate.py  testkfp.py  testkfp_pipeline.py
(+275 files in other folders)
