[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digitalhub"
version = "0.10.0b5"
description = "Python SDK for Digitalhub"
readme = "README.md"
authors = [
    { name = "Fondazione Bruno Kessler", email = "dslab@fbk.eu" },
    { name = "Matteo Martini", email = "mmartini@fbk.eu" }
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = ["data", "dataops", "kubernetes"]
requires-python = ">=3.9, <3.13"
dependencies = [
    "boto3",
    "pydantic",
    "sqlalchemy",
    "pyarrow",
    "numpy<2",
    "requests",
    "PyYAML",
    "python-dotenv",
    "GitPython>=3",
    "psycopg2-binary",
    "python-slugify",
]

[project.optional-dependencies]
full = [
    "pandas",
    "mlflow",
    "fsspec",
    "s3fs",
]
pandas = [
    "pandas",
    "fsspec",
    "s3fs",
]
mlflow = [
    "mlflow",
]
dev = [
    "pytest",
    "pytest-cov",
    "jsonschema",
    "bumpver",
]

[project.urls]
Homepage = "https://github.com/scc-digitalhub/digitalhub-sdk"

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.bumpver]
current_version = "0.10.0b5"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
